# ai-engineering

./: .gitignore  ai-memory.ipynb  main.py  memory-summarization.ipynb  vector_memory.ipynb
.kiro/specs/gatepass-ai-agent/: design.md  tasks.md
bedrock-image-generate/: body-template.py  main.py  streamlit.py
facebook-agent/: agent.py  requirements.txt
strands_agent/: .env.example  API.md  EXAMPLES.md  README.md  __init__.py  example.py  pyproject.toml
strands_agent/.kiro/specs/gatepass-ai-agent/: .config.kiro  requirements.md
strands_agent/core/: __init__.py  agent.py  api_client.py  config.py  conversation_memory.py  file_handler.py  models.py  tool_registry.py
strands_agent/tests/: __init__.py
strands_agent/tests/integration/: __init__.py
strands_agent/tests/property/: __init__.py
strands_agent/tests/unit/: __init__.py  test_agent.py  test_agent_context.py  test_api_client.py  test_conversation_memory.py  test_file_handler.py  test_gate_tools.py  test_hr_tools.py  test_tool_registry.py
strands_agent/tools/: __init__.py  admin_tools.py  gate_tools.py  hr_tools.py  notification_qr_tools.py
universal_agent/: advanced_agent.ipynb  agent.ipynb  agent_advanced.ipynb  main.py  pyproject.toml
universal_agent/content/: agent_memory.json
universal_agent/content/logs/: trace_02baa5a9-74b7-4c54-b935-d7448c93ba49.jsonl  trace_704d13cf-7a84-4fc1-84e2-af5c55ce6143.jsonl  trace_870459e5-4212-490d-9cfa-623e7f031618.jsonl  trace_92be8c4d-c49e-4b20-bcb8-38c8c1fee7af.jsonl  trace_b16b365c-73da-4232-bad1-c5ae59aae951.jsonl  (+3 more)
